fix gap between navigation

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -165,6 +165,7 @@ nav.primary {
 
   .nav-link {
     display: inline-block;
+    float: left;
     padding-bottom: 0;
 
     &:hover {
